--- a/calculating/templates/result1.html
+++ b/calculating/templates/result1.html
@@ -88,7 +88,7 @@
 
             </div>
             <div class="calltoaction-wrapper">
-                <a href="{% url 'calculating:get_result_of_value' %}" class="btn btn-orange">Сохранить результаты</a>
+                <a href="{% url 'calculating:save_result' %}" class="btn btn-orange">Сохранить результаты</a>
             </div>
         </div>
     </div>
