--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 <!--										<div class="mainmenu-submenu-inner">-->
 											<div>
 												<ul>
-													<li><a  href="#"><h4 class="sb-menu-title">Управление аккаунтом</h4></a></li>
+													<li><a  href="{% url 'account:update_user' %}"><h4 class="sb-menu-title">Управление аккаунтом</h4></a></li>
 													<li><a  href="{% url 'calculating:show_history_of_evaluations' %}"><h4 class="sb-menu-title">История измерений</h4></a></li>
 												</ul>
 											</div>
