--- a/calculating/templates/result1.html
+++ b/calculating/templates/result1.html
@@ -31,7 +31,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             {% for value in values.values %}
-                                {% if value.1 %}
+                                {% if value.1 or value.1  == 0 %}
                                     <div class="col-md-3 col-sm-6">
                                         <!-- Bar Item -->
                                         <div class="bar-item">
@@ -44,7 +44,7 @@
                                                 </div>
                                                 <div class="details">
                                                     <!-- Heading -->
-                                                    <h4>Members <span class="red">{{ value.1 }}%</span></h4>
+                                                    <h4> <span class="red">{{ value.1 }}%</span></h4>
                                                     <!-- Paragraph -->
                                                     <p>{{ value.0 }} </p>
                                                 </div>
