--- a/indicators/templates/indicators.html
+++ b/indicators/templates/indicators.html
@@ -48,6 +48,13 @@
                                 {% endfor %}
                             {% endif %}
 
+                            {% if messages %}
+                                {% for message in messages %}
+                                    <div class="alert alert-warning" role="alert">
+                                        {{ message }}
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
 						</div>
 					</div>
 				</div>
@@ -64,4 +71,10 @@
                 </div>
             </div>
         </div>
+	    <script type="text/javascript">
+
+
+
+        </script>
+
 {% endblock %}
