--- a/indicators/templates/contact.html
+++ b/indicators/templates/contact.html
@@ -34,36 +34,18 @@
 	        			<!-- Contact Form -->
 	        			<h3>Написать нам</h3>
 	        			<div class="contact-form-wrapper">
-		        			<form class="form-horizontal" role="form">
-		        				 <div class="form-group">
-		        				 	<label for="Name" class="col-sm-3 control-label"><b>Your name</b></label>
-		        				 	<div class="col-sm-9">
-										<input class="form-control" id="Name" type="text" placeholder="">
-									</div>
-								</div>
-								<div class="form-group">
-									<label for="contact-email" class="col-sm-3 control-label"><b>Your Email</b></label>
-									<div class="col-sm-9">
-										<input class="form-control" id="contact-email" type="text" placeholder="">
-									</div>
-								</div>
-								<div class="form-group">
-									<label for="contact-message" class="col-sm-3 control-label"><b>Select Topic</b></label>
-									<div class="col-sm-9">
-										<select class="form-control" id="prependedInput">
-											<option>Please select topic...</option>
-											<option>General</option>
-											<option>Services</option>
-											<option>Orders</option>
-										</select>
-									</div>
-								</div>
-								<div class="form-group">
-									<label for="contact-message" class="col-sm-3 control-label"><b>Message</b></label>
-									<div class="col-sm-9">
-										<textarea class="form-control" rows="5" id="contact-message"></textarea>
-									</div>
-								</div>
+		        			<form class="form-horizontal" role="form" method="POST" action="{% url 'contact_us' %}" >
+								{% csrf_token %}
+									{% for field in form %}
+										 <div class="form-group">
+											<div class="col-sm-3 control-label">
+												{{ field.label_tag }}
+											</div>
+											<div class="col-sm-9">
+											 {{ field }}
+											</div>
+										 </div>
+								 	{% endfor %}
 								<div class="form-group">
 									<div class="col-sm-12">
 										<button type="submit" class="btn pull-right">Send</button>
@@ -75,5 +57,12 @@
 	        		</div>
 	        	</div>
 	    	</div>
+			{% if messages %}
+				{% for message in messages %}
+					<div class="alert alert-success" role="alert">
+						{{ message }}
+					</div>
+				{% endfor %}
+			{% endif %}
 	    </div>
 {% endblock %}
