--- a/indicators/templates/main.html
+++ b/indicators/templates/main.html
@@ -147,7 +147,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="calltoaction-wrapper">
-							<h3>Рассчитать показатель цифровизации </h3> <a href="{% url 'choose_indicator' %}" class="btn btn-orange">Рассчитать</a>
+							<a href="{% url 'choose_indicator' %}" class="btn-main btn-secondary">Рассчитать показатель цифровизации</a>
 						</div>
 					</div>
 				</div>
@@ -158,7 +158,7 @@
 		<!-- Our Clients -->
 	    <div class="section">
 	    	<div class="container">
-	    		<h2>Платформа применима для организаций/предприятий отраслей и функциональных сфер Республики Беларусь</h2>
+	    		<h2>Методика расчета применима для организаций/предприятий отраслей и функциональных сфер Республики Беларусь</h2>
 				<div class="clients-logo-wrapper text-center row">
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Образование и наука</div>
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Сельское хозяйство</div>
