--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,13 +1,17 @@
 {% extends 'index.html' %}
 {% block title %}Войти{% endblock %}
 {% block 'content' %}
+    <div class="section section-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="header-text">Для входа, заполните форму.</h1>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section">
         <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-1 social-login">
-							<p class="text-center" style="padding-left:70px">Для входа в систему, заполните форму.</p>
-                    </div>
-				</div>
             <div class="row">
                 <div class="col-sm-1 col-sm-offset-1 social-login">
                 </div>
@@ -33,11 +37,7 @@
                                 {{ form.password }}
                             </div>
                             <div class="form-group">
-                                <label class="checkbox">
-                                    <input type="checkbox"> Remember me
-                                </label>
-                                <a href="page-password-reset.html" class="forgot-password">Forgot password?</a>
-                                <button type="submit" class="btn pull-right">Login</button>
+                                <button type="submit" class="btn register col-md-offset-5">Login</button>
                                 <div class="clearfix"></div>
                             </div>
                         </form>
