--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,13 +1,17 @@
 {% extends 'index.html' %}
 {% block title %}Регистрация{% endblock %}
 {% block 'content' %}
+    <div class="section section-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1 class="header-text">Для регистрации, заполните форму.</h1>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section">
 	    	<div class="container">
-				<div class="row">
-					<div class="col-sm-6 col-sm-offset-1 social-login">
-							<p class="text-center" style="padding-left:70px">Для регистрации, заполните форму.</p>
-					</div>
-				</div>
 				<div class="row">
 					<div class="col-sm-1 col-sm-offset-1 social-login"></div>
 						<div class="col-sm-5" >
@@ -21,22 +25,25 @@
 											</div>
 										{% endfor %}
 									{% endif %}
+									{{ depatment_form.label_tag }}
+									{{ depatment_form }}
 									{% for field in form %}
-									<div class="form-group">
-
-										{% if field.errors %}
-											{% for error in field.errors %}
-												<div class="alert alert-danger">
-													{{error}}
-												</div>
-											{% endfor %}
-										{% endif %}
-										{{field.label_tag}}
-										{{field}}
-									</div>
+										<div class="form-group">
+											{% if field.errors %}
+												{% for error in field.errors %}
+													<div class="alert alert-danger">
+														{{error}}
+													</div>
+												{% endfor %}
+											{% endif %}
+											{{field.label_tag}}
+											{{field}}
+										</div>
 									{% endfor %}
 									<div class="form-group">
-										<button type="submit" class="btn pull-right">Зарегистрироваться</button>
+										<div class="row">
+										<button type="submit" class="btn register col-md-offset-3">Зарегистрироваться</button>
+											</div>
 										<div class="clearfix"></div>
 									</div>
 								</form>
