--- a/account/templates/update.html
+++ b/account/templates/update.html
@@ -43,7 +43,7 @@
 									<div class="row">
 										<div class="col-sm-9" >
 											<div class="form-group">
-												<button type="submit" class="btn pull-right update-acc">Сохранить изменения</button>
+												<button type="submit" class="btn register col-md-offset-4">Сохранить изменения</button>
 												<div class="clearfix"></div>
 											</div>
 										</div>
@@ -52,7 +52,7 @@
 								<div class="row">
 									<div class="col-sm-9" >
 										<div class="form-group">
-											<a href="{% url 'account:del_user' %}"><button type="submit" class="btn pull-right update-acc">Удалить аккаунт</button></a>
+											<a href="{% url 'account:del_user' %}"><button type="submit" class="btn register col-md-offset-5">Удалить аккаунт</button></a>
 											<div class="clearfix"></div>
 										</div>
 									</div>
