--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 						</div>
 						<nav id="mainmenu" class="mainmenu">
 							<ul>
-								<li class="logo-wrapper"><a href="#"><img class="logo" src="{% static 'img/mPurpose-logo.png' %}" alt="Multipurpose Twitter Bootstrap Template"></a></li>
+								<li class="logo-wrapper"><a href="#"><img class="logo" src="{% static 'img/mPurpose-logo.png' %}" alt="Logo"></a></li>
 								<li class="active">
 									<a href="{% url 'main' %}">Главная</a>
 								</li>
