--- a/static/css/additional-style.css
+++ b/static/css/additional-style.css
@@ -272,3 +272,69 @@ p.up-info.act:hover {
 h1.header-text {
     text-align: center;
 }
+
+
+
+
+
+a.cust-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 180px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  border: 2px solid grey;
+  font-size: 24px;
+  color: grey;
+  transition: 0.5s;
+  overflow: hidden;
+}
+a.cust-btn:hover {
+  color: white;
+}
+a.cust-btn span {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: grey;
+  transition: 0.5s;
+  z-index: -1;
+}
+a.cust-btn span:nth-child(1) {
+  top: -100%;
+  left: -100%;
+}
+a.cust-btn:hover span:nth-child(1) {
+  top: 0;
+  left: 0;
+}
+a.cust-btn span:nth-child(2) {
+  bottom: -100%;
+  left: -100%;
+}
+a.cust-btn:hover span:nth-child(2) {
+  bottom: 0;
+  left: 0;
+}
+a.cust-btn span:nth-child(3) {
+  top: -100%;
+  right: -100%;
+}
+a.cust-btn:hover span:nth-child(3) {
+  top: 0;
+  right: 0;
+}
+a.cust-btn span:nth-child(4) {
+  bottom: -100%;
+  right: -100%;
+}
+a.cust-btn:hover span:nth-child(4) {
+  bottom: 0;
+  right: 0;
+}
